@@ -9,3 +9,5 @@ passwordDialogEnterPrivateKey=Entrez votre clé privée :
 youMustEnterPassword=Vous devez entrer un mot de passe !
 choosePublicKeyTitle=FireGPG - clé publique
 choosePublicKeyDescription=Choisissez la clé publique :
+showTextDefaultTitle=FireGPG - résultat 
+showTextDefaultDescription=Le résultat de l'opération :
